# portage-inb-overlay

app-admin/git-credential-kwallet/: Manifest  git-credential-kwallet-0.1.0_p20211007.ebuild  git-credential-kwallet-0.1.0_p20230403.ebuild  git-credential-kwallet-0.2.0_p20260216.ebuild
app-admin/mongodb-compass/: Manifest  mongodb-compass-1.23.0.ebuild  mongodb-compass-1.28.4.ebuild  mongodb-compass-1.30.1.ebuild
app-admin/mongodb-compass-isolated/: Manifest  mongodb-compass-isolated-1.30.1.ebuild  mongodb-compass-isolated-1.43.5.ebuild
app-admin/mongodb-compass-readonly/: Manifest  mongodb-compass-readonly-1.30.1.ebuild
app-backup/attic/: Manifest  attic-0.16-r2.ebuild  attic-0.16.ebuild
app-backup/tsm/: Manifest  tsm-7.1.6.4.ebuild  tsm-7.1.6.5.ebuild  tsm-7.1.8.0.ebuild
app-backup/vorta/: Manifest  metadata.xml  vorta-0.10.1.ebuild  vorta-0.10.3.ebuild  vorta-0.8.10.ebuild  vorta-0.8.3.ebuild  vorta-0.8.7.ebuild  vorta-0.9.1.ebuild
app-backup/zbackup/: Manifest  zbackup-1.4.1.ebuild  zbackup-1.4.4-r1.ebuild  zbackup-1.4.4-r2.ebuild  zbackup-1.4.4-r3.ebuild  zbackup-1.4.4-r4.ebuild  zbackup-1.4.4.ebuild
dev-libs/opensc-dnie/files/: Makefile.am  card_driver-def-opensc.conf.patch  configure.ac  keys.inc  no_card_driver-opensc.conf.patch  no_reader_driver-opensc.conf.patch  opensc-add_dnie.c  versionpatch.c
dev-libs/opensc-dnie/files/patches/: opensc-dnie-assuan2.patch  opensc-dnie-build.patch  opensc-dnie-keys.patch  opensc-dnie-opensc_version.patch
eclass/: grub2-theme.eclass  npm-alt.eclass
licenses/: HP-EULA-1003  oXygen-EULA
profiles/: repo_name
(+994 files in other folders)
